--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.instagram.com/apurvpratapsingh/">Instagram</a>
       <a class="footer-link" href="https://twitter.com/apurvsingh24">Twitter</a>
-      <a class="footer-link" href="https://apurvpratapsingh.github.io/cv/">Website</a>
+      <a class="footer-link" href="https://apurvpratapsingh.github.io/cv/">Website (CV) </a>
       <p class="copyright">© 2022 Apurv Pratap Singh.</p>
     </div>
 
